NCP Object Storage 사진 증빙 저장 준비
